# ra1000-calculator

./: README.md  app.js  calculator.js  index.html  pyproject.toml  setup.py  style.css  test_oe.py
python-cli/ra1000_calculator/: cli.py  core.py
ra1000_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
